--- a/hw-01.ipynb
+++ b/hw-01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -52,21 +52,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]]\n"
+      "[[0 0 0]\n",
+      " [0 0 0]\n",
+      " [0 0 0]]\n"
      ]
     }
    ],
    "source": [
-    "array_zero = np.zeros((3,3))\n",
+    "array_zero = np.zeros((3,3), dtype=int)\n",
     "print(array_zero)"
    ]
   },
@@ -79,18 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 4 4 6 5]\n",
-      " [0 1 0 6 3]\n",
-      " [4 9 4 0 2]\n",
-      " [0 8 6 1 2]\n",
-      " [8 9 1 1 5]]\n"
+      "[[3 5 5 2 8]\n",
+      " [1 6 6 7 8]\n",
+      " [2 4 7 3 8]\n",
+      " [7 4 6 5 4]\n",
+      " [2 4 7 9 2]]\n"
      ]
     }
    ],
@@ -108,17 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.35060131 0.26881356 0.3894522  0.91854451]\n",
-      " [0.41502546 0.97822861 0.57565578 0.96719295]\n",
-      " [0.26037125 0.69092044 0.51900921 0.48136417]\n",
-      " [0.5716305  0.37236515 0.90089671 0.73565878]]\n"
+      "[[0.67900335 0.64163497 0.20409539 0.05235306]\n",
+      " [0.56749832 0.15619691 0.3332902  0.60540272]\n",
+      " [0.85627259 0.9454706  0.86165493 0.38013329]\n",
+      " [0.66090483 0.76933342 0.20877236 0.15758629]]\n"
      ]
     }
    ],
@@ -136,14 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2 3 6 9 6] [2 8 7 3 5]\n"
+      "[5 7 6 8 1] [7 9 4 2 4]\n"
      ]
     }
    ],
@@ -155,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 4 11 13 12 11]\n"
+      "[12 16 10 10  5]\n"
      ]
     }
    ],
@@ -174,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0 -5 -1  6  1]\n"
+      "[-2 -2  2  6 -3]\n"
      ]
     }
    ],
@@ -193,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 4 24 42 27 30]\n"
+      "[35 63 24 16  4]\n"
      ]
     }
    ],
@@ -212,14 +212,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.         0.375      0.85714286 3.         1.2       ]\n"
+      "[0.71428571 0.77777778 1.5        4.         0.25      ]\n"
      ]
     }
    ],
@@ -238,15 +238,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 4 69 35 47 44 33  1] [12 87 24 36 67 39 83]\n",
-      "[(4, 12), (69, 87), (35, 24), (47, 36), (44, 67), (33, 39), (1, 83)]\n"
+      "[77 24 27 31 13 12 84] [18 37 75 42 95 76 45]\n",
+      "[(77, 18), (24, 37), (27, 75), (31, 42), (13, 95), (12, 76), (84, 45)]\n"
      ]
     }
    ],
@@ -260,23 +260,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12901\n"
+      "11528\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "12901"
+       "11528"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,16 +298,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2 7]\n",
-      " [1 7]] [[1 4 1]\n",
-      " [3 4 2]]\n"
+      "[[3 5]\n",
+      " [9 9]] [[8 3 5]\n",
+      " [7 9 2]]\n"
      ]
     }
    ],
@@ -320,17 +320,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[23, 36, 16],\n",
-       "       [22, 32, 15]])"
+       "array([[ 59,  54,  25],\n",
+       "       [135, 108,  63]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,16 +348,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4 6 7]\n",
-      " [7 5 8]\n",
-      " [8 2 6]]\n"
+      "[[4 8 7]\n",
+      " [1 5 1]\n",
+      " [3 9 5]]\n"
      ]
     }
    ],
@@ -368,18 +368,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 2.33333333, -3.66666667,  2.16666667],\n",
-       "       [ 3.66666667, -5.33333333,  2.83333333],\n",
-       "       [-4.33333333,  6.66666667, -3.66666667]])"
+       "array([[ 2.66666667,  3.83333333, -4.5       ],\n",
+       "       [-0.33333333, -0.16666667,  0.5       ],\n",
+       "       [-1.        , -2.        ,  2.        ]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,17 +397,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.22529664 0.79233769 0.55385578 0.10731558]\n",
-      " [0.10359205 0.65914064 0.74207153 0.64832638]\n",
-      " [0.35342823 0.54094473 0.82568263 0.82415341]\n",
-      " [0.4986664  0.07881867 0.92989255 0.65855888]]\n"
+      "[[0.84310723 0.11039013 0.50659407 0.86234804]\n",
+      " [0.12493481 0.28163928 0.19631276 0.04497847]\n",
+      " [0.35676168 0.35887951 0.15110165 0.87786766]\n",
+      " [0.37315312 0.8854132  0.33906105 0.70550681]]\n"
      ]
     }
    ],
@@ -418,19 +418,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.22529664, 0.10359205, 0.35342823, 0.4986664 ],\n",
-       "       [0.79233769, 0.65914064, 0.54094473, 0.07881867],\n",
-       "       [0.55385578, 0.74207153, 0.82568263, 0.92989255],\n",
-       "       [0.10731558, 0.64832638, 0.82415341, 0.65855888]])"
+       "array([[0.84310723, 0.12493481, 0.35676168, 0.37315312],\n",
+       "       [0.11039013, 0.28163928, 0.35887951, 0.8854132 ],\n",
+       "       [0.50659407, 0.19631276, 0.15110165, 0.33906105],\n",
+       "       [0.86234804, 0.04497847, 0.87786766, 0.70550681]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,16 +452,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3 2 2 9]\n",
-      " [9 5 8 4]\n",
-      " [3 1 1 7]] [5 3 1 5]\n"
+      "[[4 9 5 4]\n",
+      " [9 8 5 6]\n",
+      " [9 3 1 7]] [5 8 9 4]\n"
      ]
     }
    ],
@@ -473,16 +473,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([68, 88, 54])"
+       "array([153, 178, 106])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,15 +504,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.55579016 0.62434124 0.57124318]\n",
-      " [0.89887386 0.5160109  0.01737263]] [0.68913198 0.47222898 0.34992091]\n"
+      "[[0.24890374 0.37351592 0.86664586]\n",
+      " [0.12266498 0.14466036 0.66083954]] [0.80748659 0.12810274 0.89840568]\n"
      ]
     }
    ],
@@ -524,16 +524,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.87773473, 0.86919707])"
+       "array([1.02743441, 0.7112837 ])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,16 +551,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 2]\n",
-      " [7 7]] [[9 7]\n",
-      " [6 5]]\n"
+      "[[9 1]\n",
+      " [5 8]] [[1 2]\n",
+      " [4 2]]\n"
      ]
     }
    ],
@@ -572,17 +572,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 9, 14],\n",
-       "       [42, 35]])"
+       "array([[ 9,  2],\n",
+       "       [20, 16]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,16 +600,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[8 7]\n",
-      " [3 9]] [[6 4]\n",
-      " [5 2]]\n"
+      "[[3 2]\n",
+      " [2 7]] [[2 3]\n",
+      " [2 4]]\n"
      ]
     }
    ],
@@ -621,17 +621,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[83, 46],\n",
-       "       [63, 30]])"
+       "array([[10, 17],\n",
+       "       [18, 34]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,18 +649,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1 73  6 86 83]\n",
-      " [40 92 57 13 71]\n",
-      " [60 85 97 58 80]\n",
-      " [31 60 89 68 22]\n",
-      " [59 53 60 33 81]]\n"
+      "[[97 17 96  7 67]\n",
+      " [31 96 90  8 96]\n",
+      " [80 42 89 10 98]\n",
+      " [48 58 91 83 45]\n",
+      " [27 72 77 15 67]]\n"
      ]
     }
    ],
@@ -671,16 +671,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1458"
+       "1507"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,20 +698,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3 7 4 4]\n",
-      " [1 5 2 1]\n",
-      " [6 8 4 3]\n",
-      " [3 6 2 7]] [[5 8 6 6]\n",
-      " [6 3 8 8]\n",
-      " [5 3 5 9]\n",
-      " [5 7 6 1]]\n"
+      "[[3 8 4 3]\n",
+      " [6 1 6 4]\n",
+      " [2 2 6 9]\n",
+      " [9 6 2 5]] [[4 4 7 6]\n",
+      " [3 4 6 1]\n",
+      " [7 6 8 9]\n",
+      " [2 5 3 8]]\n"
      ]
     }
    ],
@@ -723,19 +723,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-2, -1, -2, -2],\n",
-       "       [-5,  2, -6, -7],\n",
-       "       [ 1,  5, -1, -6],\n",
-       "       [-2, -1, -4,  6]])"
+       "array([[-1,  4, -3, -3],\n",
+       "       [ 3, -3,  0,  3],\n",
+       "       [-5, -4, -2,  0],\n",
+       "       [ 7,  1, -1, -3]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,16 +753,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.66856502 0.69647966 0.14053685]\n",
-      " [0.48625344 0.30039452 0.42519005]\n",
-      " [0.18231214 0.29264392 0.8298105 ]]\n"
+      "[[0.72014678 0.1564155  0.82770913]\n",
+      " [0.14895346 0.94573844 0.63659489]\n",
+      " [0.16586555 0.51554508 0.14548608]]\n"
      ]
     }
    ],
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +782,7 @@
        "3"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,18 +793,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.50558154],\n",
-       "       [1.211838  ],\n",
-       "       [1.30476656]])"
+       "array([[1.7042714 ],\n",
+       "       [1.73128678],\n",
+       "       [0.8268967 ]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,18 +815,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.50558154],\n",
-       "       [1.211838  ],\n",
-       "       [1.30476656]])"
+       "array([[1.7042714 ],\n",
+       "       [1.73128678],\n",
+       "       [0.8268967 ]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,16 +844,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[79 79 44 26]\n",
-      " [ 6 11 96 93]\n",
-      " [42  1 20 93]]\n"
+      "[[11 35 26 57]\n",
+      " [43 53  9 27]\n",
+      " [ 2 92 58 11]]\n"
      ]
     }
    ],
@@ -864,18 +864,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[6241, 6241, 1936,  676],\n",
-       "       [  36,  121, 9216, 8649],\n",
-       "       [1764,    1,  400, 8649]])"
+       "array([[ 121, 1225,  676, 3249],\n",
+       "       [1849, 2809,   81,  729],\n",
+       "       [   4, 8464, 3364,  121]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,18 +886,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[6241, 6241, 1936,  676],\n",
-       "       [  36,  121, 9216, 8649],\n",
-       "       [1764,    1,  400, 8649]])"
+       "array([[ 121, 1225,  676, 3249],\n",
+       "       [1849, 2809,   81,  729],\n",
+       "       [   4, 8464, 3364,  121]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,18 +908,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[6241, 6241, 1936,  676],\n",
-       "       [  36,  121, 9216, 8649],\n",
-       "       [1764,    1,  400, 8649]], dtype=int32)"
+       "array([[ 121, 1225,  676, 3249],\n",
+       "       [1849, 2809,   81,  729],\n",
+       "       [   4, 8464, 3364,  121]], dtype=int32)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,14 +937,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[36 22 31 32]\n"
+      "[33  7 38 47]\n"
      ]
     }
    ],
@@ -955,16 +955,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([6.        , 4.69041576, 5.56776436, 5.65685425])"
+       "array([5.74456265, 2.64575131, 6.164414  , 6.8556546 ])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,16 +975,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([6.        , 4.69041576, 5.56776436, 5.65685425])"
+       "array([5.74456265, 2.64575131, 6.164414  , 6.8556546 ])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
