--- a/hw-02-01.ipynb
+++ b/hw-02-01.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Прочитайте дані за допомогою методу read_html з таблиці \"Коефіцієнт народжуваності в регіонах України (1950—2019)\" посилання"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1585,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1606,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1740,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1770,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1800,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2242,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2269,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2305,7 +2312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
