--- a/hw-02-02.ipynb
+++ b/hw-02-02.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Проведіть аналіз файлу 2017_jun_final.csv [https://docs.google.com/spreadsheets/d/1bclX5PbqE8zR1-wOSM3ZTFa53sIC7RXqwty7Abmw9yQ/edit#gid=1724592523]. Файл містить результати опитування розробників у червні 2017 року."
+    "Проведіть аналіз файлу [2017_jun_final.csv.](https://docs.google.com/spreadsheets/d/1bclX5PbqE8zR1-wOSM3ZTFa53sIC7RXqwty7Abmw9yQ/edit#gid=1724592523) Файл містить результати опитування розробників у червні 2017 року."
    ]
   },
   {
