--- a/hw-02-01.ipynb
+++ b/hw-02-01.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Прочитайте дані за допомогою методу read_html з таблиці \"Коефіцієнт народжуваності в регіонах України (1950—2019)\" посилання [https://uk.wikipedia.org/wiki/%D0%9D%D0%B0%D1%81%D0%B5%D0%BB%D0%B5%D0%BD%D0%BD%D1%8F_%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B8]"
+    "Прочитайте дані за допомогою методу read_html з таблиці \"Коефіцієнт народжуваності в регіонах України (1950—2019)\" [посилання](https://uk.wikipedia.org/wiki/%D0%9D%D0%B0%D1%81%D0%B5%D0%BB%D0%B5%D0%BD%D0%BD%D1%8F_%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "4          Донецька  27.1  21.4  14.0  10.9   6.1   9.8   8.2     —"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "(28, 9)"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
        "27            Україна  22.8  20.5  15.2  12.6   7.8  11.4  11.1   8.1"
       ]
      },
-     "execution_count": 318,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 321,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
        "26        Севастополь   NaN   NaN   NaN  12.5   7.0  12.0   NaN   NaN"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1573,7 +1573,7 @@
        "26   8.017391  "
       ]
      },
-     "execution_count": 323,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1601,7 +1601,7 @@
        "8.017391304347827"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1728,7 +1728,7 @@
        "26        Севастополь   8.017391"
       ]
      },
-     "execution_count": 325,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1747,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1758,7 +1758,7 @@
        "Name: 16, dtype: object"
       ]
      },
-     "execution_count": 326,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1777,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1807,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2231,7 +2231,7 @@
        "26   8.017391  "
       ]
      },
-     "execution_count": 328,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2249,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2276,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2312,7 +2312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2321,7 +2321,7 @@
        "<Axes: title={'center': 'Народжуваність по регіонах'}, xlabel='Регіон'>"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
