--- a/hw-02-01.ipynb
+++ b/hw-02-01.ipynb
@@ -2264,7 +2264,7 @@
     }
    ],
    "source": [
-    "pl = data.median(numeric_only=True).plot(title=\"Cередня народжувальнысть по Украъны\", ylabel=\"Кількість\", figsize=(15,4))"
+    "pl = data.median(numeric_only=True).plot(title=\"Cередня народжувальнысть по України\", ylabel=\"Кількість\", figsize=(15,4))"
    ]
   },
   {
@@ -2337,7 +2337,7 @@
     }
    ],
    "source": [
-    "data.plot(x=\"Регіон\", y=data.columns[1:], title=\"Народжуваність по регіонах\", figsize=(5, 5))"
+    "data.plot(x=\"Регіон\", y=data.columns[1:], title=\"Народжуваність по регіонах\", figsize=(15, 5))"
    ]
   }
  ],
