--- a/hw-02-02.ipynb
+++ b/hw-02-02.ipynb
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -832,50 +832,50 @@
        "      <td>Junior Software Engineer</td>\n",
        "      <td>100</td>\n",
        "      <td>1250</td>\n",
-       "      <td>560.841270</td>\n",
+       "      <td>560.84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Senior Software Engineer</td>\n",
        "      <td>1300</td>\n",
        "      <td>9200</td>\n",
-       "      <td>3387.096774</td>\n",
+       "      <td>3387.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Software Engineer</td>\n",
        "      <td>500</td>\n",
        "      <td>5400</td>\n",
-       "      <td>1799.070000</td>\n",
+       "      <td>1799.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>System Architect</td>\n",
        "      <td>3000</td>\n",
        "      <td>5000</td>\n",
-       "      <td>4000.000000</td>\n",
+       "      <td>4000.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Technical Lead</td>\n",
        "      <td>1425</td>\n",
        "      <td>6200</td>\n",
-       "      <td>3165.909091</td>\n",
+       "      <td>3165.91</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     Посада   min   max          avg\n",
-       "0  Junior Software Engineer   100  1250   560.841270\n",
-       "1  Senior Software Engineer  1300  9200  3387.096774\n",
-       "2         Software Engineer   500  5400  1799.070000\n",
-       "3          System Architect  3000  5000  4000.000000\n",
-       "4            Technical Lead  1425  6200  3165.909091"
+       "                     Посада   min   max      avg\n",
+       "0  Junior Software Engineer   100  1250   560.84\n",
+       "1  Senior Software Engineer  1300  9200  3387.10\n",
+       "2         Software Engineer   500  5400  1799.07\n",
+       "3          System Architect  3000  5000  4000.00\n",
+       "4            Technical Lead  1425  6200  3165.91"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +886,7 @@
     "    #avg = data_salary.sum() / data_salary.count()\n",
     "    return python_data[python_data[group_field] == row[group_field]][column_name].mean()\n",
     "\n",
-    "python_data_group_df[\"avg\"] = python_data_group_df.apply(fill_avg_salary, axis=1)\n",
+    "python_data_group_df[\"avg\"] = python_data_group_df.apply(fill_avg_salary, axis=1).round(2)\n",
     "python_data_group_df"
    ]
   },
@@ -899,24 +899,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "count       5.000000\n",
-       "mean     2582.583427\n",
-       "std      1387.255829\n",
-       "min       560.841270\n",
+       "mean     2582.584000\n",
+       "std      1387.256855\n",
+       "min       560.840000\n",
        "25%      1799.070000\n",
-       "50%      3165.909091\n",
-       "75%      3387.096774\n",
+       "50%      3165.910000\n",
+       "75%      3387.100000\n",
        "max      4000.000000\n",
        "Name: avg, dtype: float64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
