--- a/hw-02-03.ipynb
+++ b/hw-02-03.ipynb
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>name</th>\n",
+       "      <th>count</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>author</th>\n",
@@ -982,31 +982,31 @@
        "</div>"
       ],
       "text/plain": [
-       "                            name\n",
-       "author                          \n",
-       "Abraham Verghese               1\n",
-       "Adam Gasiewski                 1\n",
-       "Adam Mansbach                  1\n",
-       "Adir Levy                      1\n",
-       "Admiral William H. McRaven     1\n",
-       "...                          ...\n",
-       "Walter Isaacson                2\n",
-       "William Davis                  1\n",
-       "William P. Young               1\n",
-       "Wizards RPG Team               1\n",
-       "Zhi Gang Sha                   2\n",
+       "                            count\n",
+       "author                           \n",
+       "Abraham Verghese                1\n",
+       "Adam Gasiewski                  1\n",
+       "Adam Mansbach                   1\n",
+       "Adir Levy                       1\n",
+       "Admiral William H. McRaven      1\n",
+       "...                           ...\n",
+       "Walter Isaacson                 2\n",
+       "William Davis                   1\n",
+       "William P. Young                1\n",
+       "Wizards RPG Team                1\n",
+       "Zhi Gang Sha                    2\n",
        "\n",
        "[248 rows x 1 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# data_books = dataframe[[\"name\", \"author\"]]\n",
-    "data_books = dataframe[[\"name\", \"author\"]].groupby(\"author\").agg(lambda x: len(x.unique()))\n",
+    "data_books = dataframe[[\"name\", \"author\"]].groupby(\"author\").agg(lambda x: len(x.unique())).rename(columns={\"name\": \"count_books\"})\n",
     "data_books"
    ]
   },
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>name</th>\n",
+       "      <th>count</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>author</th>\n",
@@ -1061,18 +1061,18 @@
        "</div>"
       ],
       "text/plain": [
-       "             name\n",
-       "author           \n",
-       "Jeff Kinney    12"
+       "             count\n",
+       "author            \n",
+       "Jeff Kinney     12"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_books[data_books[\"name\"] == data_books[\"name\"].max()]"
+    "data_books[data_books[\"count\"] == data_books[\"count\"].max()]"
    ]
   },
   {
@@ -1081,6 +1081,329 @@
    "source": [
     "## Відповідь: Jeff Kinney\n",
     "## Скільки книг цього автора? Відповідь: 12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Тепер створіть новий датафрейм, який вміщатиме кількість книг для кожного з авторів (використовуйте функції groupby та agg, для підрахунку кількості використовуйте count). Не беріть усі стовпці, виберете тільки потрібні"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_rating</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>author</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Abraham Verghese</th>\n",
+       "      <td>4.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adam Gasiewski</th>\n",
+       "      <td>4.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adam Mansbach</th>\n",
+       "      <td>4.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adir Levy</th>\n",
+       "      <td>4.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Admiral William H. McRaven</th>\n",
+       "      <td>4.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Walter Isaacson</th>\n",
+       "      <td>4.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>William Davis</th>\n",
+       "      <td>4.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>William P. Young</th>\n",
+       "      <td>4.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wizards RPG Team</th>\n",
+       "      <td>4.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zhi Gang Sha</th>\n",
+       "      <td>4.60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>248 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            user_rating\n",
+       "author                                 \n",
+       "Abraham Verghese                   4.60\n",
+       "Adam Gasiewski                     4.40\n",
+       "Adam Mansbach                      4.80\n",
+       "Adir Levy                          4.80\n",
+       "Admiral William H. McRaven         4.70\n",
+       "...                                 ...\n",
+       "Walter Isaacson                    4.55\n",
+       "William Davis                      4.40\n",
+       "William P. Young                   4.60\n",
+       "Wizards RPG Team                   4.80\n",
+       "Zhi Gang Sha                       4.60\n",
+       "\n",
+       "[248 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_books_rating = dataframe[[\"author\", \"user_rating\"]].drop_duplicates().groupby(\"author\").agg({\"user_rating\": \"mean\"})\n",
+    "data_books_rating"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## У якого автора середній рейтинг мінімальний?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_rating</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>author</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Donna Tartt</th>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             user_rating\n",
+       "author                  \n",
+       "Donna Tartt          3.9"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_books_rating[data_books_rating[\"user_rating\"] == data_books_rating[\"user_rating\"].min()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Відповідь: Donna Tartt\n",
+    "## Який у цього автора середній рейтинг? \n",
+    "## Відповідь: 3.9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "З'єднайте останні два датафрейми так, щоб для кожного автора було видно кількість книг та середній рейтинг (Використовуйте функцію concat з параметром axis=1). Збережіть результат у змінну\n",
+    "Відсортуйте датафрейм за зростаючою кількістю книг та зростаючим рейтингом (використовуйте функцію sort_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>user_rating</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>author</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Abraham Verghese</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adam Gasiewski</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adam Mansbach</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adir Levy</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Admiral William H. McRaven</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Walter Isaacson</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>William Davis</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>William P. Young</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wizards RPG Team</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zhi Gang Sha</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4.60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>248 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            count  user_rating\n",
+       "author                                        \n",
+       "Abraham Verghese                1         4.60\n",
+       "Adam Gasiewski                  1         4.40\n",
+       "Adam Mansbach                   1         4.80\n",
+       "Adir Levy                       1         4.80\n",
+       "Admiral William H. McRaven      1         4.70\n",
+       "...                           ...          ...\n",
+       "Walter Isaacson                 2         4.55\n",
+       "William Davis                   1         4.40\n",
+       "William P. Young                1         4.60\n",
+       "Wizards RPG Team                1         4.80\n",
+       "Zhi Gang Sha                    2         4.60\n",
+       "\n",
+       "[248 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.concat([data_books, data_books_rating], axis=1)\n",
+    "data"
    ]
   }
  ],
